--- a/websocket-jetty/src/main/resources/application.properties
+++ b/websocket-jetty/src/main/resources/application.properties
@@ -8,6 +8,5 @@ spring.thymeleaf.suffix=.html
 server.jetty.acceptors=1
 server.jetty.selectors=1
 
-logging.level.org.springframework=DEBUG
-logging.level.org.eclipse=DEBUG
+logging.level.org.springframework=INFO
 logging.level.test.micky.websocket=DEBUG
