fix config - use boot webflux setting - spring logging level up

--- a/websocket-netty/src/main/resources/application.properties
+++ b/websocket-netty/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8000
 
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=WARN
 logging.level.test.micky.websocket=DEBUG
