--- a/websocket-netty/build.gradle
+++ b/websocket-netty/build.gradle
@@ -36,8 +36,6 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('io.projectreactor:reactor-test')
-
-	// https://mvnrepository.com/artifact/org.webjars/sockjs-client
-	compile group: 'org.webjars', name: 'sockjs-client', version: '1.1.2'
+	compile group: 'org.webjars', name: 'jquery', version: '1.12.4'
 
 }
