--- a/websocket-netty/src/main/resources/application.properties
+++ b/websocket-netty/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8000
 
-logging.level.org.springframework=WARN
-logging.level.test.micky.websocket=DEBUG
+logging.level.org.springframework=INFO
+logging.level.test.micky.websocket=TRACE
+
+spring.output.ansi.enabled=Always
